argocd/infra/monitoring/vmlogs/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: monitoring-app
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: VictoriaLogs
    gethomepage.dev/icon: victoriametrics
    gethomepage.dev/description: ""
    gethomepage.dev/pod-selector: app.kubernetes.io/name=victoria-logs-single
  name: vmlogs-httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - logs.yanello.net
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: victoria-logs-single-server
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
